acvm-repo/msgpack_tagged/tests/compile_fail/serde_skip_in_implicit_tuple.stderr
error: `#[serde(skip)]` on tuple-style fields is not supported
 --> tests/compile_fail/serde_skip_in_implicit_tuple.rs:8:18
  |
8 | struct Pair(u32, #[serde(skip)] bool);
  |                  ^^^^^^^^^^^^^^^^^^^
